--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "coa/messenger-bundle",
     "description": "gestion des messages asynchone",
     "type": "symfony-bundle",
-    "version": "v0.0.2",
+    "version": "v0.0.3",
     "minimum-stability": "dev",
     "prefer-stable": false,
     "require": {
@@ -14,7 +14,8 @@
         "ext-openssl": "*",
         "symfony/http-client": "5.4.*",
         "symfony/messenger": "5.4.x-dev",
-        "symfony/serializer": "5.4.x-dev"
+        "symfony/serializer": "5.4.x-dev",
+        "ext-amqp": "*"
     },
     "license": "proprietary",
     "autoload": {
