--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/http-client": "5.4.*",
         "symfony/messenger": "5.4.x-dev",
         "symfony/serializer": "5.4.x-dev",
-        "ext-amqp": "*"
+        "ext-amqp": "*",
+        "symfony/filesystem": "5.4.x-dev"
     },
     "license": "proprietary",
     "autoload": {
