--- a/src/Resources/config/packages/coa_messenger.yaml
+++ b/src/Resources/config/packages/coa_messenger.yaml
@@ -1,2 +1,8 @@
 coa_messenger:
   handlers: ~
+
+
+services:
+  Coa\MessengerBundle\Messenger\Handler\HandlerManager:
+    arguments:
+      $handlers: []
